infrastructure/openshift/legacy-operator/postgresql-operator-DeploymentConfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    template.alpha.openshift.io/wait-for-ready: 'true'
  name: postgresql-legacy-operator
  labels:
    app: LEGACY-OPERATOR
spec:
  replicas: 1
  selector:
    name: postgresql-legacy-operator
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      labels:
        name: postgresql-legacy-operator
    spec:
      containers:
        - env:
            - name: POSTGRESQL_USER
              value: postgresuser
            - name: POSTGRESQL_PASSWORD
              value: postgrespassword
            - name: POSTGRESQL_DATABASE
              value: mydata
          image: docker-registry.default.svc:5000/openshift/postgresql@sha256:75b2d147b559487a42bf37e48867a09337e7f02ba91c8ff420be3c5a74faef9d
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - /usr/libexec/check-container
                - '--live'
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: postgresql-legacy-operator
          ports:
            - containerPort: 5432
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - /usr/libexec/check-container
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: postgresql-legacy-operator-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: postgresql-legacy-operator-data
  triggers:
    - type: ConfigChange
