infrastructure/openshift/legacy-operator/postgresql-operator-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-legacy-operator
  labels:
    app: LEGACY-OPERATOR
spec:
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: postgresql-legacy-operator
  sessionAffinity: None
  type: ClusterIP
