infrastructure/openshift/legacy-operator/redis-Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: LEGACY-OPERATOR
  name: redis-legacy-operator
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    name: redis-legacy-operator
  sessionAffinity: None
  type: ClusterIP
