infrastructure/openshift/legacy-operator/operator-Route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: LEGACY-OPERATOR
  name: legacy-operator
spec:
  host: legacy-operator.dev.services.jtech.se
  port:
    targetPort: http
  to:
    kind: Service
    name: legacy-operator
    weight: 100
  wildcardPolicy: None
  tls:
    valueFrom:
      secretKeyRef:
        key: jtech.se.crt
        name: tls
    termination: edge
